fixed gaps

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,7 +17,7 @@
 .form {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+
   @include abstracts.respondMax(abstracts.$desktop) {
     flex-wrap: wrap;
     margin-top: var(--margin-extra-large);
@@ -29,6 +29,9 @@
   }
   &__input-group {
     position: relative;
+    &:not(:first-child) {
+      margin-left: 1rem;
+    }
   }
   &__icon {
     position: absolute;
@@ -58,6 +61,7 @@
     }
   }
   &__button {
+    margin-left: 1rem;
     @include abstracts.respondMax(abstracts.$desktop) {
       flex: 0 0 50%;
     }
